@@ -7,6 +7,7 @@ import com.desafio.biblioteca.dto.EmprestimoRequestDTO;
 import com.desafio.biblioteca.dto.EmprestimoResponseDTO;
 import com.desafio.biblioteca.dto.LivroResponseDTO;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -16,12 +17,9 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
- * Serviço responsável por orquestrar o ciclo de vida de empréstimos e o motor de recomendações.
- *
- * Esta implementação foca no desacoplamento entre a persistência e a regra de negócio,
- * utilizando processamento em memória via Java Streams para garantir a flexibilidade
- * exigida nos critérios de recomendação por categoria.
+ * Implementação da lógica de locação e inteligência de recomendação.
  */
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class EmprestimoService {
@@ -31,29 +29,16 @@ public class EmprestimoService {
     private final LivroService livroService;
     private final LivroRepository livroRepository;
 
-    /**
-     * Registra um novo empréstimo validando a disponibilidade imediata do exemplar.
-     *
-     * A restrição de "um empréstimo ativo por vez" é verificada em tempo de execução,
-     * garantindo que livros já alocados não possam ser associados a novos usuários
-     * até que o status seja alterado para DEVOLVIDO.
-     *
-     * @param dto Contém as referências de ID para Usuário e Livro.
-     * @return Representação do empréstimo persistido.
-     * @throws RuntimeException Caso o livro solicitado já possua um empréstimo com status ATIVO.
-     */
     @Transactional
     public EmprestimoResponseDTO realizarEmprestimo(EmprestimoRequestDTO dto) {
-        Livro livro = livroService.buscarPorId(dto.livroId());
-        Usuario usuario = usuarioService.buscarPorId(dto.usuarioId());
+        log.info("Iniciando locação: livroId={}, usuarioId={}", dto.livroId(), dto.usuarioId());
 
-        boolean livroOcupado = emprestimoRepository.findAll().stream()
-                .anyMatch(e -> e.getLivro().getId().equals(livro.getId())
-                        && e.getStatus() == StatusEmprestimo.ATIVO);
-
-        if (livroOcupado) {
+        if (emprestimoRepository.existsByLivroIdAndStatus(dto.livroId(), StatusEmprestimo.ATIVO)) {
             throw new RuntimeException("Este livro já possui um empréstimo ativo.");
         }
+
+        Livro livro = livroService.buscarPorId(dto.livroId());
+        Usuario usuario = usuarioService.buscarPorId(dto.usuarioId());
 
         Emprestimo emprestimo = new Emprestimo();
         emprestimo.setUsuario(usuario);
@@ -64,21 +49,12 @@ public class EmprestimoService {
         return EmprestimoResponseDTO.fromEntity(emprestimoRepository.save(emprestimo));
     }
 
-    /**
-     * Registra a devolução de um exemplar e atualiza o estado do empréstimo.
-     * * Este método encerra o ciclo de vida de um empréstimo ativo, permitindo que a obra
-     * fique disponível para novas locações e atualizando o histórico para o sistema de recomendações.
-     *
-     * @param id Identificador único do empréstimo.
-     * @return DTO com os dados atualizados da devolução.
-     * @throws RuntimeException Caso o empréstimo não exista ou já tenha sido devolvido.
-     */
     @Transactional
     public EmprestimoResponseDTO devolverLivro(Long id) {
         Emprestimo emprestimo = emprestimoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Empréstimo não encontrado com o ID: " + id));
+                .orElseThrow(() -> new RuntimeException("Registro de empréstimo não localizado."));
 
-        if (emprestimo.getStatus() == StatusEmprestimo.DEVOLVIDO) {
+        if (StatusEmprestimo.DEVOLVIDO.equals(emprestimo.getStatus())) {
             throw new RuntimeException("Este empréstimo já consta como devolvido no sistema.");
         }
 
@@ -88,34 +64,29 @@ public class EmprestimoService {
         return EmprestimoResponseDTO.fromEntity(emprestimoRepository.save(emprestimo));
     }
 
-    /**
-     * Motor de Recomendação Baseado em Categorias do Histórico.
-     *
-     * O algoritmo analisa as categorias das obras previamente consumidas pelo usuário
-     * para sugerir novos títulos do mesmo gênero que ainda não constam em seu histórico
-     * de empréstimos, otimizando a descoberta de novos conteúdos.
-     *
-     * @param usuarioId Identificador único do usuário para cruzamento de dados.
-     * @return Coleção de DTOs representando as obras sugeridas.
-     */
     @Transactional(readOnly = true)
     public List<LivroResponseDTO> recomendarLivros(Long usuarioId) {
-        List<Emprestimo> historico = emprestimoRepository.findAll().stream()
-                .filter(e -> e.getUsuario().getId().equals(usuarioId))
-                .toList();
+        List<Emprestimo> historico = emprestimoRepository.findByUsuarioId(usuarioId);
 
-        Set<String> categoriasInteresse = historico.stream()
+        Set<String> categorias = historico.stream()
                 .map(e -> e.getLivro().getCategoria())
                 .collect(Collectors.toSet());
 
-        Set<Long> livrosJaLidos = historico.stream()
+        if (categorias.isEmpty()) return List.of();
+
+        Set<Long> jaLidos = historico.stream()
                 .map(e -> e.getLivro().getId())
                 .collect(Collectors.toSet());
 
-        return livroRepository.findAll().stream()
-                .filter(l -> categoriasInteresse.contains(l.getCategoria()))
-                .filter(l -> !livrosJaLidos.contains(l.getId()))
+        return livroRepository.findByCategoriaInAndIdNotIn(categorias, jaLidos).stream()
                 .map(LivroResponseDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<EmprestimoResponseDTO> listarTodos() {
+        return emprestimoRepository.findAll().stream()
+                .map(EmprestimoResponseDTO::fromEntity)
+                .toList();
     }
 }
